http configurer modified