@@ -1,6 +1,8 @@
 package com.pancarte.ecommerce.security;
 
+import com.auth0.jwt.interfaces.Header;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -17,7 +19,6 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.net.http.HttpHeaders;
 import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -30,11 +31,20 @@ public class JwtAuthorizationFilter  extends OncePerRequestFilter{
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
-        if(request.getServletPath().equals("/login") || request.getServletPath().equals("/api/token/refresh")) {
+        final var header = request.getHeader(HttpHeaders.AUTHORIZATION);
+        if (null != header) {
+            final var headerContainsPrefix = header.startsWith("Bearer");
+
+            if (!headerContainsPrefix) {
+                filterChain.doFilter(request, response);
+                return;
+            }
+        }
+        if (request.getServletPath().equals("/login") || request.getServletPath().equals("/api/token/refresh") || request.getServletPath().equals("/api/register")) {
             filterChain.doFilter(request, response);
-        }else {
+        } else {
             String authHeader = request.getHeader("Authorization");
-            if(authHeader != null && authHeader.startsWith("Bearer")) {
+            if (authHeader != null && authHeader.startsWith("Bearer")) {
                 try {
                     String jwt = authHeader.substring("Bearer ".length());
                     Algorithm algorithm = Algorithm.HMAC256("secret".getBytes());
@@ -42,24 +52,26 @@ public class JwtAuthorizationFilter  extends OncePerRequestFilter{
                     DecodedJWT decodedJWT = verifier.verify(jwt);
                     String email = decodedJWT.getSubject();
                     List<SimpleGrantedAuthority> authorities = Stream.of(decodedJWT.getClaim("roles").asArray(String.class))
-                            .map(SimpleGrantedAuthority::new).collect(Collectors.toList());
-                    UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(email, null, null);
+                            .map(SimpleGrantedAuthority::new).toList();
+                    UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(email, null, authorities);
                     SecurityContextHolder.getContext().setAuthentication(authenticationToken);
                     filterChain.doFilter(request, response);
                 } catch (Exception e) {
                     response.setHeader("error", e.getMessage());
-                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-                    // response.sendError(HttpServletResponse.SC_FORBIDDEN);
+                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "USER NOT AUTHORIZED");
                     HashMap<String, String> error = new HashMap<>();
                     error.put("error_message", e.getMessage());
                     response.setContentType(MediaType.APPLICATION_JSON_VALUE);
                     new ObjectMapper().writeValue(response.getOutputStream(), error);
                 }
+            } else {
+                filterChain.doFilter(request, response);
             }
         }
-
+    }
 
 }
 
     
-}
+
